--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@syncfusion/ej2-react-maps": "^29.1.34",
     "@syncfusion/ej2-react-navigations": "^29.1.41",
     "@syncfusion/ej2-react-splitbuttons": "^29.1.33",
+    "appwrite": "^17.0.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
+    "react-router-dom": "^7.5.3",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
