--- a/.env.local
+++ b/.env.local
@@ -7,4 +7,10 @@ VITE_APPWRITE_API_KEY=standard_83b643db6fdccb5ab17c2807362dc017e98e5c747e7067266
 VITE_APPWRITE_DATABASE_ID=681dcc2f000a4fc3ad81
 VITE_APPWRITE_USERS_COLLECTION_ID=681dcc5e001f26607026
 VITE_APPWRITE_TRIPS_COLLECTION_ID=681dcc930012318ae44f
-VITE_APPWRITE_API_ENDPOINT=https://cloud.appwrite.io/v1
+VITE_APPWRITE_API_ENDPOINT=https://fra.cloud.appwrite.io/v1
+
+# Gemini
+GEMINI_API_KEY=AIzaSyBwUIwNe5HYBii5j8HbpcGoV7B6eMLSOsw
+
+# Unsplash
+UNSPLASH_ACCESS_KEY=K9Ff8tJte9YJXBPovoUw31UZ-5DGFfJM-bggdSCQc7M
